<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PatientBooking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!!</string>
    <string name="user">User name</string>
    <string name="pass">Password</string>
    <string name="submit">submit</string>
    <string name="title_activity_patient_details">PatientDetails</string>
    <string name="details">Patient details</string>
    <string name="enter">Enter details</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Timing</string>
    <string name="contact">Contact No</string>
    <string name="choose">Choose hospital</string>
    <string name="next">Next</string>
    <string name="title_activity_hospital">Hospital</string>
    <string name="title_activity_category">Category</string>
    <string name="category">Select the problem</string>
    <string name="title_activity_appointment">Appointment</string>

</resources>
