<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PatientDetails" >

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="26dp"
        android:text="@string/details" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv4"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="30dp"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_below="@+id/t1"
        android:layout_marginTop="28dp"
        android:text="@string/name" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:text="@string/next" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t3"
        android:layout_toRightOf="@+id/b2"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et3"
        android:layout_alignTop="@+id/t3"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/et6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et4"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et5"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t3"
        android:layout_below="@+id/et4"
        android:layout_marginTop="46dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t4"
        android:layout_alignRight="@+id/t1"
        android:layout_alignTop="@+id/et6"
        android:text="@string/contact" />

    <EditText
        android:id="@+id/et5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et6"
        android:layout_alignTop="@+id/t4"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t2"
        android:layout_below="@+id/t2"
        android:layout_marginTop="54dp"
        android:text="@string/date" />

</RelativeLayout>